exports[`<ListItemDivider /> should render as list item div 1`] = `
<li
  className="mdc-list-divider"
  role="separator" />
`;

exports[`<ListItemDivider /> should render as list item div with inset 1`] = `
<li
  className="mdc-list-divider mdc-list-divider--inset"
  role="separator" />
`;
